# nonebot-plugin-dingtalk-logger

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_dingtalk_logger/: __init__.py
nonebot_plugin_dingtalk_logger/dingtalk/: __init__.py  api.py  bot.py  models.py
src/nonebot_plugin_dingtalk_logger/: __init__.py  config.py
